css/style.css
/* stylesheet */


* {
  font-family: 'Consolas', sans-serif;
  color: #3C2F2F;
  margin: 0;
  padding: 0;
}

@font-face {
  font-family: 'Aurora';
  src: url(../assets/fonts/AURORA-Regular.ttf);
}

.sub-header {
  font-family: 'Caraque Trial', sans-serif;
  font-size: large;
  color: #854442;
}

.header {
  font-family: 'Aurora', sans-serif;
}

.important
/* NAVBAR */
.navbar {
  background: #FFF2E1;
}

.logo {
  width: 10vmax;
  margin: 2vmax 2vmax 2vmax 1vmax;
}

/* NAVBAR END */

/* MARQUEE */

.marquee-text {
  overflow: clip;
}

.marquee-text-track {
  display: flex;
  gap: 4.8rem;
  animation: marquee-move-text 10s linear infinite;
  width: max-content;
  padding-left: 4.8rem;
}

.marquee-text p {
  text-transform: uppercase;
  font-size: large;
  border-radius: 50px;
}


@keyframes marquee-move-text {
  to {
    transform: translateX(-50%);
  }
  
}

